--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,12 @@ dependencies:
   firebase_analytics: ^5.0.11
   firebase_auth: ^0.16.0
   cloud_firestore: ^0.13.5
+  image_picker: ^0.6.5+3
+  cached_network_image: ^2.2.0
+  firebase_storage: ^3.1.5
+  flutter_image_compress: ^0.6.7
+  path_provider: ^1.6.7
+  uuid: ^2.0.4
 
 
 dev_dependencies:
@@ -46,10 +52,10 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #  - images/a_dot_burr.jpeg
+  assets:
+   - assets/images/
   #  - images/a_dot_ham.jpeg
-
+  
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
