--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   uuid: ^2.0.4
   provider: ^4.0.5+1
   image_cropper: ^1.2.1
+  animator: ^2.0.0
+  intl: ^0.16.1
+
 
 
 dev_dependencies:
